--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
     <div class="subjects">
         <h4>Subjects</h4>
         <p>
-            English |Symbol E|HG<br />Tswana |Symbol E|HG<br />
-            Mathematics |Symbol C|SG<br />Geography |Symbol D|SG<br />
-            SACRIL |Symbol D|SG<br />
-            Physical Science |Symbol D|SG<br />Biology |Symbol D|SG<br />
+            English |Symbol E|HG<br />Tswana |Symbol E|HG
+            Mathematics |Symbol C|SG<br />Geography |Symbol D|SG
+            SACRIL |Symbol D|SG
+            Physical Science |Symbol D|SG<br />Biology |Symbol D|SG
 
         </p>
     </div>
