--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                 Name: Simon<br />
                 Surname: Mataboge<br />
                 Date of birth: 23 July 1988<br />
-                Identity Number:  <br />
+                Identity Number:8807235691086  <br />
                 Nationality: South Africa<br />
                 Home Language: Tswana<br />
                 Other Language:English and Zulu<br />
                 Drivers License: C1<br />
                 Gender: Male<br />
                 Marital Status: Single<br />
-                Contacts: 0732844918<br />
+                Contacts: 073 284 4918<br />
                 Email: simonmatabogeao@gmail.com<br />
                 Address: 564 Block B Letlhabile 0264<br />
 
@@ -52,7 +52,7 @@
 
     <div class="employ">
         <h1>EMPLOYMENT HISTORY</h1>
-        <table class="table table-stripped table-dark">
+        <table class="table">
             <thead>
                 <tr>
                     <th scope="col">Company Name</th>
@@ -72,13 +72,13 @@
                     <th scope="row">Avuxheni Pc</th>
                     <td>General Assistant</td>
                     <td>05 June 2018-05 Dec 2018 </td>
-                    <td>Presentation<br />Train students<br />cleaner<br />Admin<br />Pc technician</td>
+                    <td>Presentation<br />Train Students<br />Cleaner, Admin<br />Pc technician</td>
                 </tr>
                 <tr>
-                    <th scope="row">Halaletsang</th>
-                    <td>Packer</td>
-                    <td>01 May 2019-03 Sep 2019 </td>
-                    <td>Admin assistant<br />Load truck <br /> offload truck <br /> Organise food</td>
+                    <th scope="row">Zonaka Zwivhuya</th>
+                    <td>Project Manager<br /> (Renovation and Maintenence)</td>
+                    <td>08 Mar 2024-30 May 2024 </td>
+                    <td>General Manager<br />Client Liason <br /> Stock Count</td>
                 </tr>
             </tbody>
         </table>
@@ -88,7 +88,6 @@
     <div class="skills">
         <h1>SKILLS</h1>
         <div class="core">
-
             <h4>Core skills</h4>
             <div class="skills-web">Web Design </div>
             <div class="skills-dev">Web Development </div>
@@ -97,7 +96,7 @@
             <div class="skills-py">Python </div>
             <div class="skills-shark">Wireshark </div>
             <div class="skills-core">Coreldraw </div>
-            <div class="skills-code">Codeblock</div>
+            <div class="skills-code">Computer Literacy</div>
         </div>
         <div class="soft">
 
@@ -108,9 +107,8 @@
             <div class="skills-communicate">Communication </div>
             <div class="skills-team">Team Player</div>
             <div class="skills-problem">Problem Solver</div>
-            <div class="skills-hard">Hard Worker</div>
+            <div class="skills-hard">Relations Management skills</div>
             <div class="skills-active">Physically active</div>
-
         </div>
     </div>
 
@@ -120,7 +118,6 @@
         <p>
             Institution Attended 		: 	IQ Academy<br />
             Course 						: 	Information System Manager<br />
-            Type Of Qualification 		: 	Certificate<br />
             Certificate Number 			:	14996<br />
             Date Issued					:	13 May 2016
         </p>
@@ -176,18 +173,18 @@
     <div class="contact">
         <div class="contact-box">
             <u>Personal Details</u><br />
-            <b>Contact Person 		:</b> 	Daphney Motsepe<br />
-            <b>Conatact Number 		:</b> 	078 800 2870<br />
+            <b>Contact Person 		:</b> 	Moses Ratshivhadelo<br />
+            <b>Conatact Number 		:</b> 	081 312 3357<br />
 
-            <b>Occupation 			:</b> 	Field Manager<br />
-            <b>Relationship 		:</b> 	Manager<br />
+            <b>Occupation 			:</b> 	Project Manager<br />
+            <b>Relationship 		:</b> 	Business Associate<br />
         </div>
     </div>
     <div class="contact">
         <div class="contact-box">
             <u>Personal Details</u><br />
             <b>Contact Person 		:</b> 	Mr Isaac Mnisi<br />
-            <b>Conatact Number 		:</b> 	012 251 1306<br />
+            <b>Conatact Number 		:</b> 	083 722 3444<br />
 
             <b>Occupation 			:</b> 	Principal<br />
             <b>Relationship 		:</b> 	Principal<br />
@@ -201,13 +198,6 @@
         </p>
     </div>
 
-    <div class="footer">
-        <div class="text">
-            <p>
-                Curriculum Vitae Of Simon Mataboge.Proudly brought to you by mwserve.co.za
-            </p>
-        </div>
-    </div>
 
 
 
